--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla Weather App</title>
     <link rel="stylesheet" href="src/style.css" />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,9 +18,35 @@
     />
   </head>
   <body>
-    <h1>Hello</h1>
-    <p>Weather app</p>
-
+    <div class="contrainer">
+      <div class="card">
+        <form class="search_city">
+          <input
+            type="text"
+            placeholder="Search other city"
+            id="search-input"
+          />
+          <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+        <div class="weatherInfo">
+          <div class="row">
+            <div class="col-6">
+              <h1>Stockholm</h1>
+              <ul>
+                <li><span class="now">Month Date, Year at HH:MM</span></li>
+                <li><span class="humidity">Humidity: 80%</span></li>
+                <li><span class="wind">Wind: 4.63km</span></li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <div>
+                <span class="temperature">13</span><span class="unit">°C</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
