Added current city weather CSS and Added forecast in HTML

--- a/index.html
+++ b/index.html
@@ -32,16 +32,42 @@
           <div class="row">
             <div class="col-6">
               <h1>Stockholm</h1>
-              <ul>
-                <li><span class="now">Month Date, Year at HH:MM</span></li>
+              <h2><span class="temperature">17 </span><span class="unit">°C</span></h2>
+              <h3><span class="weather-icon">☀️</span></h3>
+            </div>
+              <div class="col-6">
+                    <ul>
+                <li><span class="now">Month Date at HH:MM</span></li>
                 <li><span class="humidity">Humidity: 80%</span></li>
                 <li><span class="wind">Wind: 4.63km</span></li>
               </ul>
-            </div>
-            <div class="col-6">
-              <div>
-                <span class="temperature">13</span><span class="unit">°C</span>
               </div>
+            </div>
+            <div class="row">
+            <div class="col forecast-day">
+              <ul class="day">  
+<li><span class="forecastday1">Monday </span></li>
+<li><span class="forecastday2">Tuesday </span></li>
+  <li><span class="forecastday3">Wednesday </span></li>
+    <li><span class="forecastday4">Thursday </span></li>
+              </ul>
+            </div>
+            <div class="col forecast-icon">
+               <ul class="day-icon">  
+<li><span class="forecastday1-icon">🌤 </span></li>
+<li><span class="forecastday2-icon">🌧</span></li>
+  <li><span class="forecastday3-icon">⛅️</span></li>
+    <li><span class="forecastday4-icon">☀️</span></li>
+              </ul>
+            </div>
+               <div class="col forecast-temp">
+               <ul class="day-temp">  
+<li><span class="forecastday1-temp">13°C</span></li>
+<li><span class="forecastday2-temp">14°C</span></li>
+  <li><span class="forecastday3-temp">15°C</span></li>
+    <li><span class="forecastday4-temp">16°C</span></li>
+              </ul>
+            </div>
             </div>
           </div>
         </div>
