--- a/index.html
+++ b/index.html
@@ -26,20 +26,23 @@
             placeholder="Search other city"
             id="search-input"
           />
-          <button type="submit" class="btn btn-primary">Search</button>
+          <button type="submit">Search</button>
         </form>
         <div class="weatherInfo">
           <div class="row">
             <div class="col-6">
               <h1>Stockholm</h1>
-              <h2><span class="temperature">17 </span><span class="unit">°C</span></h2>
+              <h2><span class="temperature">17 </span><span class="unit unitC">°C</span><span class="unit"> | </span><span class="unit unitF">°F</span></h2>
               <h3><span class="weather-icon">☀️</span></h3>
+          
             </div>
               <div class="col-6">
                     <ul>
                 <li><span class="now">Month Date at HH:MM</span></li>
+                <li><span class="description">Clear</span></li>
                 <li><span class="humidity">Humidity: 80%</span></li>
                 <li><span class="wind">Wind: 4.63km</span></li>
+        
               </ul>
               </div>
             </div>
