Updated currentTime function on JS

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
               <div class="col-6">
                     <ul>
-                <li><span class="now">Month Date at HH:MM</span></li>
+                <li><span class="current">Month Date at HH:MM</span></li>
                 <li><span class="description">Clear</span></li>
                 <li><span class="humidity">Humidity: 80%</span></li>
                 <li><span class="wind">Wind: 4.63km</span></li>
