--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="contrainer">
       <div class="card">
-        <form id="search-city">
+        <form id="search-form">
           <input
             type="text"
             placeholder="Search other city"
@@ -34,15 +34,15 @@
             <div class="col-6">
               <h1 id="city">Stockholm</h1>
               <h2><span id="temp">17 </span><span class="unit" id="unitC">°C</span><span class="unit"> | </span><span class="unit" id="unitF">°F</span></h2>
-              <h3><span class="weather-icon">☀️</span></h3>
+              <h3><span id="icon">☀️</span></h3>
           
             </div>
               <div class="col-6">
                     <ul>
                 <li><span class="current">Month Date at HH:MM</span></li>
-                <li><span class="description">Clear</span></li>
-                <li><span class="humidity">Humidity: 80%</span></li>
-                <li><span class="wind">Wind: 4.63km</span></li>
+                <li><span id="description">Clear</span></li>
+                <li>Humidity: <span id="humidity">80%</span></li>
+                <li>Wind: <span id="wind">4.63</span>km</li>
         
               </ul>
               </div>
