Updated weather icon on JS *not working

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <div class="col-6">
               <h1 id="city">Stockholm</h1>
               <h2><span id="temp">17 </span><span class="unit" id="unitC">°C</span><span class="unit"> | </span><span class="unit" id="unitF">°F</span></h2>
-              <h3><span id="icon">☀️</span></h3>
-          
+              <div class="weather-icon"> <img src="" alt="" id="icon" class="float-left" /></div>
             </div>
               <div class="col-6">
                     <ul>
