--- a/index.html
+++ b/index.html
@@ -6,42 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla Weather App</title>
     <link rel="stylesheet" href="src/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
-      rel="stylesheet"
-    />
-    <link
+        <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
     <div class="contrainer">
       <div class="card">
         <form id="search-form">
+          <div class="row">
+              <div class="col-9">
           <input
-            type="text"
+            type="search"
             placeholder="Search other city"
+            class="form-control"
             id="search-input"
           />
-          <button type="submit">Search</button>
+           </div>
+              <div class="col-3">
+              <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-110"
+                />
+           </div>
+            </div>
         </form>
         <div class="weatherInfo">
           <div class="row">
             <div class="col-6">
-              <h1 id="city">Stockholm</h1>
+              <h1 id="city"></h1>
               <h2><span id="temp">17 </span><span class="unit" id="unitC">°C</span><span class="unit"> | </span><span class="unit" id="unitF">°F</span></h2>
               <div class="weather-icon"> <img src="" alt="" id="icon" class="float-left" /></div>
             </div>
               <div class="col-6">
                     <ul>
                 <li><span class="current">Month Date at HH:MM</span></li>
-                <li><span id="description">Clear</span></li>
-                <li>Humidity: <span id="humidity">80%</span></li>
-                <li>Wind: <span id="wind">4.63</span>km</li>
+                <li><span id="description"></span></li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span>km</li>
         
               </ul>
               </div>
