Added "°C vs °F" function on JS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
           <div class="row">
             <div class="col-6">
               <h1 id="city"></h1>
-              <h2><span id="temp">17 </span><span class="unit" id="unitC">°C</span><span class="unit"> | </span><span class="unit" id="unitF">°F</span></h2>
+              <h2><span id="temp"> </span> <span class="units">
+                <a href id="celsius-link"class="active">°C</a> | 
+                <a href id="faranheit-link">°F</a>
+              </span></h2>
               <div class="weather-icon"> <img src="" alt="" id="icon" class="float-left" /></div>
             </div>
               <div class="col-6">
