--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
           />
            </div>
               <div class="col-3">
-              <input
+              <button
                   type="submit"
                   value="Search"
-                  class="btn btn-primary w-110"
-                />
+                  id="button"
+                >Search</button>
+                
            </div>
             </div>
         </form>
@@ -89,6 +90,14 @@
             </div>
           </div>
         </div>
+         <small>
+          <a
+            href="https://github.com/NoAi-coder/Weather-App-Vanilla"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Ai
+        </small>
       </div>
     </div>
     <script src="src/app.js"></script>
